# mcp-llm-bridge

./: .env.example  .gitignore  README.md  interact.py  manual_test.py  pyproject.toml  simple_test.py  test_client.py
.github/workflows/: ci.yml  dependencies.yml  quality.yml
examples/: CLAUDE.md.example  adapters.json.example
src/mcp_llm_bridge/: __init__.py  adapters.py  context_selector.py  conversation.py  server.py
tests/: __init__.py  test_adapters.py  test_context_selector.py  test_conversation.py  test_fastmcp_api_regression.py  test_integration.py  test_server.py
